--- a/style/style.css
+++ b/style/style.css
@@ -52,32 +52,111 @@ table {
     width: 80px; height: 80px;
     background: #999;
     border-radius: 50px;
+    margin-top: 20px;
+  
 }
+
+.choice:nth-child(1){
+    margin-top: 0px;
+}
+
+
 .arrow {
     display: none;
+    position: relative;
+    top: 50%;
+    
+ 
 }
 .arrow_L{
-    width: 30px; height: 30px;
-    background: #444;
+    position: absolute;
     display: block;
+    transform: translateY(-50%);
+    left: -21px;
+    
 }
 .arrow_R{
-    width: 30px; height: 30px;
-    background: #222;
+    position: absolute;
     display: block;
+    transform: translateY(-50%);
+    left:80px;
+    
 }
-#test{
-    width: 100px; height: 100px; background: #999;
-    display: block;
+
+
+body{
+width: 100%;
+height: 100%;
+}
+
+.container{
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    
 }
 
 .all_wrap{
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    height: 100%;
+
 }
 
-.menu_L{flex-grow: 1;}
-.main_wrap{flex-grow: 1;
-width: 500px;}
-.menu_R{flex-grow: 1;}
+
+.menu{
+    display: flex; 
+    justify-content: center; 
+    flex-direction: column; 
+    background-color: #444;
+}
+
+
+
+.card_wrap{
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+}
+
+#card{
+    position: relative;
+    margin: 0 30px;
+}
+
+.human{
+    position: absolute;
+    width: 300px;
+    top: 31px;
+    left: 53px;
+}
+
+
+
+.card_bg{
+    image-rendering: -webkit-optimize-contrast;
+    position: relative;
+    left: 61px;
+    z-index: -9;
+    transform: translateY(-100%);
+}
+
+
+.big_arrow_L{
+  
+  max-height: 44px;
+}
+
+.big_arrow_R{
+ 
+ max-height: 44px;
+}
+
+
+button{width: 150px;}
+
+
+.bg{width: 100%; height: 100%; position: absolute; z-index: -10; top:0px; left: 0px; background-color: #eee;}
+
