--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Sharp|Material+Icons+Two+Tone|Material+Icons+Outlined');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,46 +50,10 @@ table {
 }
 /* 리셋 끝 */
 
-.choice{
-    width: 80px; height: 80px;
-    background: #999;
-    border-radius: 50px;
-    margin-top: 20px;
-  
-}
-
-.choice:nth-child(1){
-    margin-top: 0px;
-}
-
-
-.arrow {
-    display: none;
-    position: relative;
-    top: 50%;
-    
- 
-}
-.arrow_L{
-    position: absolute;
-    display: block;
-    transform: translateY(-50%);
-    left: -21px;
-    
-}
-.arrow_R{
-    position: absolute;
-    display: block;
-    transform: translateY(-50%);
-    left:80px;
-    
-}
-
-
 body{
-width: 100%;
-height: 100%;
-}
+    width: 100%;
+    height: 100%;
+    }    
 
 .container{
     width: 100%;
@@ -110,9 +76,45 @@ height: 100%;
     display: flex; 
     justify-content: center; 
     flex-direction: column; 
-    background-color: #444;
+
 }
 
+
+
+.choice{
+    width: 80px; height: 80px;
+    background: #999;
+    border-radius: 50px;
+    margin-top: 40px;
+  
+}
+
+.choice:nth-child(1){
+    margin-top: 0px;
+}
+
+
+.arrow {
+    display: none;
+    position: relative;
+    
+    
+ 
+}
+.arrow_L{
+    position: absolute;
+    display: block;
+    transform: translateY(-50%);
+    left: -21px;
+    margin-left: -5px;
+}
+.arrow_R{
+    position: absolute;
+    display: block;
+    transform: translateY(-50%);
+    left:80px;
+    margin-left: 5px;
+}
 
 
 .card_wrap{
@@ -133,6 +135,15 @@ height: 100%;
     left: 53px;
 }
 
+.human_body{
+    position: absolute;
+    z-index: 2;
+}
+
+.swiper{
+    width:  967px;
+    height: 487px;
+}
 
 
 .card_bg{
@@ -144,18 +155,21 @@ height: 100%;
 }
 
 
-.big_arrow_L{
-  
+.big_arrow_L .big_arrow_R{  
   max-height: 44px;
-}
-
-.big_arrow_R{
- 
- max-height: 44px;
 }
 
 
 button{width: 150px;}
+
+.menu > .choice > span{
+    pointer-events: none;
+    position: relative;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px; 
+}
 
 
 .bg{width: 100%; height: 100%; position: absolute; z-index: -10; top:0px; left: 0px; background-color: #eee;}
