--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-@import url('https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Sharp|Material+Icons+Two+Tone|Material+Icons+Outlined');
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -83,15 +83,23 @@ body{
 
 .choice{
     width: 80px; height: 80px;
-    background: #999;
+    background: rgb(221, 221, 221);
     border-radius: 50px;
     margin-top: 40px;
-  
+    border: solid rgb(201, 201, 201);
+    border-style: dashed;
 }
 
 .choice:nth-child(1){
     margin-top: 0px;
 }
+
+
+.choice_click{
+    background: #8E6AB7;
+    border: 4px solid #57416D;
+}
+
 
 
 .arrow {
@@ -106,14 +114,14 @@ body{
     display: block;
     transform: translateY(-50%);
     left: -21px;
-    margin-left: -5px;
+    margin-left: -8px;
 }
 .arrow_R{
     position: absolute;
     display: block;
     transform: translateY(-50%);
     left:80px;
-    margin-left: 5px;
+    margin-left: 8px;
 }
 
 
@@ -140,9 +148,52 @@ body{
     z-index: 2;
 }
 
+#card > div.card_human  ul > li > img{
+    position: absolute;
+    width: 300px;
+    top: 31px;
+    left: 53px;
+}
+
+
+.hair{
+    position: absolute;
+    z-index: 5;
+}
+
+.brows{
+    position: absolute;
+    z-index: 4;
+}
+
+.eyes{
+    position: absolute;
+    z-index: 6;
+}
+
+.lips{
+    position: absolute;
+    z-index: 3;
+}
+
+.cloth{
+    position: absolute;
+    z-index: 7;
+}
+
 .swiper{
     width:  967px;
     height: 487px;
+}
+
+
+#card > div.card_human  ul > li{
+    display: none;
+}
+
+
+#card > div.card_human  ul > li:first-child{
+    display: block;
 }
 
 
@@ -151,16 +202,43 @@ body{
     position: relative;
     left: 61px;
     z-index: -9;
-    transform: translateY(-100%);
+    transform: translateY(-103%);
 }
-
+/* 이거 카드배경 높이를 딱 맞추는 방법 모르겠음 */
 
 .big_arrow_L .big_arrow_R{  
   max-height: 44px;
 }
 
 
-button{width: 150px;}
+button{
+    position: relative;
+    left: 50%;
+    transform : translateX(-50%);
+    top: 100px;
+    width: 140px;
+    height: 45px;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover {
+    background-color: #8f6ab7;
+    box-shadow: 0px 15px 20px rgba(58, 18, 82, 0.4);
+    color: #fff;
+    
+  }
+
+
 
 .menu > .choice > span{
     pointer-events: none;
@@ -169,6 +247,12 @@ button{width: 150px;}
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 40px; 
+    color: #57416d;
+}
+
+.icon_active{
+    font-size: 50px; 
+    color: #ffffff;
 }
 
 
