--- a/style/style.css
+++ b/style/style.css
@@ -79,6 +79,54 @@ body{
 
 }
 
+.name{
+    position: absolute;
+    z-index: 10;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-16%);
+    border: none;
+    width: 297px;
+    height: 40px;
+    overflow: auto;
+    font-size: 32px;
+    color: #000000;
+    background: transparent;
+    text-align: center;
+}
+
+.birth{
+    position: absolute;
+    z-index: 10;
+    top: 46%;
+    left: 65.5%;
+    transform: translateX(-16%);
+    border: none;
+    width: 245px;
+    height: 40px;
+    overflow: auto;
+    font-size: 32px;
+    color: #000000;
+    background: transparent;
+    text-align: center;
+}
+
+.date{
+    position: absolute;
+    z-index: 10;
+    top: 60.5%;
+    left: 65.5%;
+    transform: translateX(-16%);
+    border: none;
+    width: 245px;
+    height: 40px;
+    overflow: auto;
+    font-size: 32px;
+    color: #000000;
+    background: transparent;
+    text-align: center;
+}
+
 
 
 .choice{
@@ -86,8 +134,17 @@ body{
     background: rgb(221, 221, 221);
     border-radius: 50px;
     margin-top: 40px;
-    border: solid rgb(201, 201, 201);
+    /*border px 통일*/
+    border: 4px solid rgb(201, 201, 201);
     border-style: dashed;
+
+    /*마우스 선택방지..클릭할때 선택되는게 불편할거같아서 추가해봄 --굿밥*/
+    -ms-user-select: none; 
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+ 
 }
 
 .choice:nth-child(1){
@@ -105,9 +162,16 @@ body{
 .arrow {
     display: none;
     position: relative;
-    
-    
- 
+
+
+
+}
+
+/*화살표 활성화 class추가*/
+.arrow.arrow_active {
+    display: block;
+    position: relative;
+
 }
 .arrow_L{
     position: absolute;
@@ -134,12 +198,13 @@ body{
 #card{
     position: relative;
     margin: 0 30px;
+    overflow: hidden;
 }
 
 .human{
     position: absolute;
     width: 300px;
-    top: 31px;
+    top: 32px;
     left: 53px;
 }
 
@@ -148,7 +213,7 @@ body{
     z-index: 2;
 }
 
-#card > div.card_human  ul > li > img{
+#card > div.card_human img{
     position: absolute;
     width: 300px;
     top: 31px;
@@ -156,27 +221,27 @@ body{
 }
 
 
-.hair{
-    position: absolute;
-    z-index: 5;
-}
-
-.brows{
-    position: absolute;
-    z-index: 4;
-}
-
-.eyes{
+#hair{
     position: absolute;
     z-index: 6;
 }
 
-.lips{
+#brows{
+    position: absolute;
+    z-index: 4;
+}
+
+#eyes{
+    position: absolute;
+    z-index: 5;
+}
+
+#lips{
     position: absolute;
     z-index: 3;
 }
 
-.cloth{
+#cloth{
     position: absolute;
     z-index: 7;
 }
@@ -239,7 +304,7 @@ button:hover {
   }
 
 
-
+/* 구글아이콘 */
 .menu > .choice > span{
     pointer-events: none;
     position: relative;
@@ -250,8 +315,8 @@ button:hover {
     color: #57416d;
 }
 
-.icon_active{
-    font-size: 50px; 
+.menu > .choice > .icon_active{
+    font-size: 50px;
     color: #ffffff;
 }
 
